# pycryptpad-tools

./: .gitignore  README.md  cryptpad-cli  default.nix  docker.nix  pyproject.toml  python_dev_env.nix  setup.cfg  setup.py  shell.nix  test.md
nix/: deps.nix  sources.json
src/pycryptpad_tools/: cli.py  padapi.py
